--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <section class="main-section">
     <header class="header-section">
-      <p class="logo"><b> My Logo</b> </p> 
+      <p class="logo"><b>My Logo</b> </p> 
 
 <nav class="bttn">
       <span class="line"></span>
@@ -28,7 +28,7 @@
      <p class="head-section">I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
   </div>
      <div>
- <p class="lets"> LET'S CONNECT </p> 
+ <hx class="lets"> LET'S CONNECT </hx> 
  </div>
  <br>
  <div>
@@ -66,7 +66,7 @@
     <section class="card_item">
       <div class="snap">
       </div>
-      <h1 class="tex"> Tonic</h1> <br>
+      <hx class="tex"> Tonic</hx> <br>
       <ul class="list">
         <li class="canopy"><b> CANOPY</b></li>
         <li ><img src="images/cano/Counter.png" alt=""></li>
@@ -86,7 +86,7 @@
       <div class="snap">
         <img src="images/snap2/Snapshoot Portfolio.png" alt="">
       </div>
-      <h1 class="tex">Multi-Post Stories</h1>
+      <hx class="tex">Multi-Post Stories</hx>
       <ul class="list">
         <li class="canopy"><b> CANOPY</b></li>
         <li> <img src="images/cano/Counter.png" alt=""> </li>
@@ -106,7 +106,7 @@
       <div class="snap">
         <img src="images/snap3/Snapshoot Portfolio.png" alt="">
       </div>
-      <h1 class="tex">Tonic</h1>
+      <hx class="tex">Tonic</hx>
       <ul class="list">
         <li class="canopy"><b> CANOPY</b></li>
         <li><img src="images/cano/Counter.png" alt=""></li>
@@ -126,7 +126,7 @@
       <div class="snap">
         <img src="images/snap4/Snapshoot Portfolio.png" alt="">
       </div>
-      <h1 class="tex"> Multi-Post Stories</h1>
+      <hx class="tex"> Multi-Post Stories</hx>
       <ul class="list">
         <li class="canopy"><b> CANOPY</b></li>
         <li><img src="images/cano/Counter.png" alt=""></li>
@@ -150,8 +150,8 @@
       <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my
         work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
       </p><br>
-      <p class="lets"> LET'S CONNECT
-      </p>
+      <hx class="lets"> LET'S CONNECT
+      </hx>
     </div>
     <br>
     <div class="social">
