--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      <p class="head-section">I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
   </div>
      <div>
- <hx class="lets"> LET'S CONNECT </hx> 
+ <h2 class="lets"> LET'S CONNECT </h2> 
  </div>
  <br>
  <div>
@@ -66,7 +66,7 @@
     <section class="card_item">
       <div class="snap">
       </div>
-      <hx class="tex"> Tonic</hx> <br>
+      <h2 class="tex"> Tonic</h2> <br>
       <ul class="list">
         <li class="canopy"><b> CANOPY</b></li>
         <li ><img src="images/cano/Counter.png" alt=""></li>
@@ -86,7 +86,7 @@
       <div class="snap">
         <img src="images/snap2/Snapshoot Portfolio.png" alt="">
       </div>
-      <hx class="tex">Multi-Post Stories</hx>
+      <h3 class="tex">Multi-Post Stories</h3>
       <ul class="list">
         <li class="canopy"><b> CANOPY</b></li>
         <li> <img src="images/cano/Counter.png" alt=""> </li>
@@ -106,7 +106,7 @@
       <div class="snap">
         <img src="images/snap3/Snapshoot Portfolio.png" alt="">
       </div>
-      <hx class="tex">Tonic</hx>
+      <h4 class="tex">Tonic</h4>
       <ul class="list">
         <li class="canopy"><b> CANOPY</b></li>
         <li><img src="images/cano/Counter.png" alt=""></li>
@@ -126,7 +126,7 @@
       <div class="snap">
         <img src="images/snap4/Snapshoot Portfolio.png" alt="">
       </div>
-      <hx class="tex"> Multi-Post Stories</hx>
+      <h5 class="tex"> Multi-Post Stories</h5>
       <ul class="list">
         <li class="canopy"><b> CANOPY</b></li>
         <li><img src="images/cano/Counter.png" alt=""></li>
@@ -150,8 +150,8 @@
       <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my
         work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.
       </p><br>
-      <hx class="lets"> LET'S CONNECT
-      </hx>
+      <h2 class="lets"> LET'S CONNECT
+      </h2>
     </div>
     <br>
     <div class="social">
