--- a/index.html
+++ b/index.html
@@ -228,6 +228,35 @@
       </ul>
     </div>
   </section>
+  <section class="contact">
+
+    <div>
+     Contact me
+     <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it</p>
+    </div> 
+    <div>
+     <form action="/my-handling-form-page" method="post">
+      <ul>
+       <li>
+         <label for="Name"> Name</label>
+         <input type="text" id="name" name="user_name">
+       </li>
+       <li>
+         <label for="email">Email address</label>
+         <input type="email" id="mail" name="user_email" >
+       </li>
+       <li>
+         <label for="message">Message</label>
+        <textarea name="user_message" id="msg" cols="" rows="5"></textarea>
+       </li>
+       <li class="button">
+ <button type="submit">get intouch</button>
+       </li>
+      </ul>
+     </form>
+ 
+   </div>
+   </section>
 </body>
 
 </html>
