--- a/index.html
+++ b/index.html
@@ -191,24 +191,30 @@
     <div>
       <button id="bttn">Get My Resume</button>
     </div><br>
+
     <ul>
       <div class="fr">
         <p class="la">Languages </p>
         <img class="dropdown" src="images/drop.jpeg" alt="">
       </div><br>
+
       <li class="li">
         <img src="shapes/Ellipse 1.png" alt="">
         <p id="java">Javascript</p>
       </li><br>
+
       <li class="li">
         <img src="shapes/eclipse/Ellipse 1.png" alt="">
         <p id="htm">HTML</p>
       </li><br>
+
       <li class="li">
         <img src="shapes/eclipse 2/Ellipse 1.png" alt="">
         <P id="cs">CSS</P>
       </li><br>
+
     </ul>
+
     <div>
       <ul>
         <li class="fr">
@@ -228,29 +234,30 @@
       </ul>
     </div>
   </section>
+
   <section class="contact">
 
     <div>
-     Contact me
-     <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it</p>
+     <h2 class="contact-text">Contact me</h2>
+     <div class="par-container"><p class="par-contact">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it</p></div>
     </div> 
     <div>
      <form action="/my-handling-form-page" method="post">
       <ul>
        <li>
-         <label for="Name"> Name</label>
-         <input type="text" id="name" name="user_name">
+         <input type="text" class="name" name="user_name" placeholder="Yeremias" required maxlength="30">
        </li>
+
        <li>
-         <label for="email">Email address</label>
-         <input type="email" id="mail" name="user_email" >
+         <input type="email" class="mail" name="user_email" placeholder="natajayanj14@gmail.com" required>
        </li>
+
        <li>
-         <label for="message">Message</label>
-        <textarea name="user_message" id="msg" cols="" rows="5"></textarea>
+        <textarea name="user_message" class="msg" cols="" rows="5" placeholder="Write your message here" required maxlength="500"></textarea>
        </li>
+
        <li class="button">
- <button type="submit">get intouch</button>
+        <div class="but-container"><button class="button" type="submit">Get In Touch</button></div>
        </li>
       </ul>
      </form>
