--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 </nav>
   </header>
   <br> <br>
-  <section  >
-    <img  class="background-image" src="shapes/i-bttn/background-shapes/header-shapes mobile.png" alt="">
-     
+  <section class="shapes" > 
       <div>   <h1 class="tex">I’m Trevor <br> Glad to see you!</h1>
      <p class="head-section">I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
   </div>
@@ -256,8 +254,10 @@
         <textarea name="user_message" class="msg" cols="" rows="5" placeholder="Write your message here" required maxlength="500"></textarea>
        </li>
 
-       <li class="button">
-        <div class="but-container"><button class="button" type="submit">Get In Touch</button></div>
+       <li>
+        
+          <a href="#" class="btn">Get In Touch</a>
+        </div>
        </li>
       </ul>
      </form>
