--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
      <div class="par-container"><p class="par-contact">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it</p></div>
     </div> 
     <div>
-     <form action="/my-handling-form-page" method="post">
+     <form action="https://formspree.io/f/xeqwozwl" method="post">
       <ul>
        <li>
          <input type="text" class="name" name="user_name" placeholder="Yeremias" required maxlength="30">
@@ -256,7 +256,7 @@
 
        <li>
         
-          <a href="#" class="btn">Get In Touch</a>
+          <button type="submit" class="btn">Get In Touch</button>
         </div>
        </li>
       </ul>
