--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
       <p class="logo"><b>My Logo</b> </p> 
 
 <nav class="bttn">
-      <span class="line"></span>
-      <span class="line"></span>
-      <span class="line"></span>
+    <ul class="nav-list">
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">contact</a></li>
+    </ul>
 </nav>
   </header>
   <br> <br>
@@ -63,6 +65,27 @@
     <img src="eclipse/" alt="">
   </section>
   <section class="container">
+    <section class="card_item">
+      <div class="snap">
+        <img src="/images" alt="">
+      </div>
+      <h5 class="tex"> Multi-Post Stories</h5>
+      <ul class="list">
+        <li class="canopy"><b> CANOPY</b></li>
+        <li><img src="images/cano/Counter.png" alt=""></li>
+        <li class="bac">Back End Dev</li>
+        <li><img src="images/cano/Counter.png" alt=""></li>
+        <li class="bac">2015</li>
+      </ul>
+      <p class="p">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+      <ul class="text">
+        <li class="lists">html</li>
+        <li class="lists">css</li>
+        <li class="lists">javascript</li>
+      </ul>
+      <button id="bttn">see project</button>
+    </section>
+  </section>
     <section class="card_item">
       <div class="snap">
       </div>
