change placeholders in index.html

--- a/index.html
+++ b/index.html
@@ -245,11 +245,11 @@
      <form action="https://formspree.io/f/xeqwozwl" method="post">
       <ul>
        <li>
-         <input type="text" class="name" name="user_name" placeholder="Yeremias" required maxlength="30">
+         <input type="text" class="name" name="user_name" placeholder="Name" required maxlength="30">
        </li>
 
        <li>
-         <input type="email" class="mail" name="user_email" placeholder="natajayanj14@gmail.com" required>
+         <input type="email" class="mail" name="user_email" placeholder="Your email address" required>
        </li>
 
        <li>
